--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ sudo: required
 services:
     - docker
 before_install: 
-    - docker build -t svvone/multi-test -f ./client/Dockerfile.dev
+    - docker build -t svvone/multi-test -f ./client/Dockerfile.dev ./client
 script:
     - docker run -e CI=true svvone/multi-test npm test
 after_success:
