Add travis config

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,10 +7,10 @@ before_install:
 script:
     - docker run -e CI=true svvone/multi-test npm test
 after_success:
-    - docker build -t svvone/multi-nginx1 -f ./nginx/Dockerfile
-    - docker build -t svvone/multi-client1 -f ./client/Dockerfile
-    - docker build -t svvone/multi-server1 -f ./server/Dockerfile
-    - docker build -t svvone/multi-worker1 -f ./worker/Dockerfile
+    - docker build -t svvone/multi-nginx1 -f ./nginx/Dockerfile ./nginx
+    - docker build -t svvone/multi-client1 -f ./client/Dockerfile ./client
+    - docker build -t svvone/multi-server1 -f ./server/Dockerfile ./server
+    - docker build -t svvone/multi-worker1 -f ./worker/Dockerfile ./worker
     - echo "$DOCKER_PASS" | docker login -u "$DOCKER_ID" --password-stdin
     - docker push svvone/multi-nginx1
     - docker push svvone/multi-client1
